[maven-release-plugin] prepare release 0.1.0

--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -12,7 +10,7 @@
 
     <groupId>de.gofabian</groupId>
     <artifactId>spring-boot-data-r2dbc-jooq</artifactId>
-    <version>0.1.0-SNAPSHOT</version>
+    <version>0.1.0</version>
 
     <name>spring-boot-data-r2dbc-jooq</name>
     <description>use jooq with spring-data-r2dbc</description>
@@ -35,7 +33,7 @@
         <connection>scm:git:git@github.com:gofabian/spring-boot-data-r2dbc-jooq.git</connection>
         <developerConnection>scm:git:git@github.com:gofabian/spring-boot-data-r2dbc-jooq.git</developerConnection>
         <url>http://github.com/gofabian/spring-boot-data-r2dbc-jooq/tree/master</url>
-        <tag>HEAD</tag>
+        <tag>0.1.0</tag>
     </scm>
 
     <properties>
