--- a/pom.xml
+++ b/pom.xml
@@ -151,6 +151,9 @@
             <plugin>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>2.9.1</version>
+                <configuration>
+			        <source>8</source>
+			    </configuration>
                 <executions>
                     <execution>
                         <id>package-javadoc</id>
