Add support for MySQL JSON type

--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,7 @@
             <groupId>dev.miku</groupId>
             <artifactId>r2dbc-mysql</artifactId>
             <version>0.8.2.RELEASE</version>
-            <scope>test</scope>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
